[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/ui.gd" type="Script" id=1]
[ext_resource path="res://theme/theme.tres" type="Theme" id=2]

[sub_resource type="Animation" id=2]
resource_name = "gameover"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverScreen/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0.00392157, 0.0470588, 0.0745098, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverScreen/VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.1, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.0198676, 0.543046, 1 )
colors = PoolColorArray( 0.3125, 1, 0, 1, 0.450134, 0.976563, 0.877857, 1, 1, 1, 1, 0 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
playback_speed = 4.0
anims/gameover = SubResource( 2 )

[node name="GameOverScreen" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/GameOverScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/GameOverScreen"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -84.5
margin_right = 205.0
margin_bottom = 184.5
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/GameOverScreen/VBoxContainer"]
margin_right = 410.0
margin_bottom = 65.0
text = "Reached U-235"
align = 1

[node name="Button" type="Button" parent="Control/GameOverScreen/VBoxContainer"]
margin_top = 69.0
margin_right = 410.0
margin_bottom = 269.0
rect_min_size = Vector2( 160, 200 )
size_flags_horizontal = 5
size_flags_vertical = 5
text = "PLAY AGAIN"

[node name="MarginContainer" type="MarginContainer" parent="Control/GameOverScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -50.0
margin_right = 80.0
margin_bottom = 50.0
size_flags_horizontal = 5
size_flags_vertical = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 51.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="Control/MarginContainer"]
position = Vector2( 299.111, 33.5159 )
emitting = false
amount = 64
lifetime = 0.6
one_shot = true
explosiveness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 60, 20 )
direction = Vector2( 0, -1 )
spread = 92.9
gravity = Vector2( 0, 784 )
initial_velocity = 240.0
initial_velocity_random = 0.67
angle = 405.0
angle_random = 1.0
scale_amount = 4.0
scale_amount_random = 0.66
color_ramp = SubResource( 1 )

[node name="LabelScore" type="Label" parent="Control/MarginContainer"]
margin_right = 600.0
margin_bottom = 65.0
size_flags_vertical = 0
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/GameOverScreen/VBoxContainer/Button" to="." method="_on_Button_pressed"]
